--- a/azure-pipelines-self-hosted.yml
+++ b/azure-pipelines-self-hosted.yml
@@ -10,10 +10,9 @@ pool:
   name: Default 
 
 steps:
-# - task: NodeTool@0
-#   inputs:
-#     versionSpec: '16.x'
-#   displayName: 'Install Node.js'
+  - task: UseNode@1
+    inputs:
+      versionSpec: '14.x'
 
   - task: QodanaScan@2024
     env:
