--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "url": "git+https://github.com/JetBrains/qodana-cli.git"
   },
   "scripts": {
-    "lint": "npm run -w common lint && npm run -w scan lint && npm run -w vsts lint",
-    "build": "tsc -b common scan vsts --force",
+    "lint": "npm run -w common lint && npm run -w scan lint && npm run -w vsts lint && npm run -w gitlab lint",
+    "build": "tsc -b common scan vsts gitlab --force",
     "test": "npm run test --workspaces",
-    "package": "npm run -w scan package && npm run -w vsts package",
+    "package": "npm run -w scan package && npm run -w vsts package && npm run -w gitlab package",
     "all": "npm run lint && npm run build && npm run test && npm run package"
   },
   "contributors": [
@@ -31,7 +31,8 @@
   "workspaces": [
     "common",
     "scan",
-    "vsts"
+    "vsts",
+    "gitlab"
   ],
   "devDependencies": {
     "eslint": "^8.57.1",
